# freecell

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac
doc/: ChangeLog
man/: FreeCell.1  Makefile.am
scripts/: Makefile.am  installNecessary.sh  pics.sh
src/: CMakeLists.txt  Makefile.am  main.cpp
src/libs/: FreeCell_config.h  card.cpp  card.hpp  drawSystem.cpp  game.cpp  game.hpp  menu.cpp  stats.cpp  stats.hpp
src/libs/holders/: endgame.cpp  endgame.hpp  placeholder.cpp  placeholder.hpp  safehouse.cpp  safehouse.hpp
